# not-quite-transcendental

./: .gitignore  .gitmodules  README.md  faketable.py
paper/: .gitignore  Makefile  fast-logs.bib  fast-logs.tex
paper2/: aastex631.cls  main.tex  refs.bib
paper2/figures/: nqt_timings.txt
raw_data/: AthenaK_NQT.ipynb  NQT_speedups.ipynb  gcc-cuda-modules.txt  gcc-modules.txt  intel-modules.txt
src/: .gitignore  CMakeLists.txt  NQTLibDoubleSingleCompar.cpp  logs.hpp  timings.cpp
